# ants

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  concepts.md
include/: Game.h  constants.h
include/Ants/: Alimentation.h  Position.h
include/Ants/Types/: Ant.h  Queen.h  Scout.h  SlaveOwner.h  Soldier.h  Worker.h
include/Board/: ColonyTile.h  EmptyTile.h  FoodTile.h  Map.h  ObstacleTile.h  Tile.h
include/Graphics/: AntDraw.h  GameRender.h  TileDraw.h
lib/SFML-2.5.1_linux/lib/cmake/SFML/: SFMLSharedTargets.cmake
lib/SFML-2.5.1_linux/share/SFML/doc/html/: jquery.js
src/: Game.cpp  main.cpp
src/Ants/: Alimentation.cpp  Position.cpp
src/Ants/Types/: Ant.cpp  Queen.cpp  Scout.cpp  SlaveOwner.cpp  Soldier.cpp  Worker.cpp
src/Board/: ColonyTile.cpp  EmptyTile.cpp  FoodTile.cpp  Map.cpp  ObstacleTile.cpp  Tile.cpp
src/Graphics/: AntDraw.cpp  GameRender.cpp  TileDraw.cpp
tests/: test.cpp
